--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>학번 이름</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <h1>첫번째 웹 페이지</h1>
+    <hr>
+    <ul>
+        <li><a href="#">실습 과제 1_HTML</a></li>
+        <li><a href="#">실습 과제 2_CSS</a></li>
+        <li><a href="#">실습 과제 3_Layout</a></li>
+        <li><a href="#">실습 과제 4_JavaScript</a></li>
+    </ul>
 </body>
 </html>
