--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
 <head>
     <title>학번 이름</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1>첫번째 웹 페이지</h1>
+    <div class="container mt-3 ">
+    <h1>index.html (학과 학번 이름)</h1>
     <hr>
-    <ul>
-        <li><a href="#">실습 과제 1_HTML</a></li>
-        <li><a href="#">실습 과제 2_CSS</a></li>
-        <li><a href="#">실습 과제 3_Layout</a></li>
-        <li><a href="#">실습 과제 4_JavaScript</a></li>
+    <ul class="nav flex-column">
+        <li class="pb-3"><a href="#">실습 과제 1_HTML</a> <span class="badge bg-primary">제출완료</span></li>
+        <li class="pb-3"><a href="#">실습 과제 2_CSS</a> <span class="badge bg-primary">제출완료</span></li>
+        <li class="pb-3"><a href="#">실습 과제 3_Layout</a> <span class="badge bg-primary">제출완료</span></li>
+        <li class="pb-3"><a href="#">실습 과제 4_JavaScript 1</a> <span class="badge bg-danger">제출예정</span></li>
+        <li class="pb-3"><a href="#">실습 과제 5_JavaScript 2</a> <span class="badge bg-danger">제출예정</span></li>
     </ul>
+</div>
 </body>
 </html>
